# crypto-vol-surface

./: .gitignore  CLAUDE.md  NOTES.md  README.md  RESEARCH.md  SCOPE.md  docker-compose.yml  pyproject.toml  run_once.py
scripts/: backup.sh  fit_smile.py  fit_surface.py  validate_iv.py
src/volsurface/: __init__.py  config.py
src/volsurface/analytics/: README.md  __init__.py  smile_fit.py  surface_fit.py  surface_plot.py
src/volsurface/calibration/: README.md  __init__.py  ssvi.py  svi.py
src/volsurface/ingestion/: README.md  __init__.py  __main__.py  deribit_client.py  deribit_ws.py  poller_main.py  rest_poller.py
src/volsurface/pricer/: README.md  __init__.py  black76.py  forward.py  inverse.py  iv_solver.py
src/volsurface/storage/: README.md  __init__.py  db.py
src/volsurface/validation/: README.md  __init__.py  iv_error.py
storage/: schema.sql
tests/: conftest.py  test_black76.py  test_db.py  test_deribit_client.py  test_deribit_ws.py  test_inverse.py  test_iv_solver.py  test_rest_poller.py  test_smile_fit.py  test_ssvi.py  test_surface_fit.py  test_surface_plot.py  test_svi.py  test_validation.py
tests/analytics/: surface_summary_20260525T154217.json  surface_summary_20260526T140403.json
tests/fixtures/: deribit_book_summary_btc_future.json  deribit_book_summary_btc_option.json  deribit_get_instruments_btc_future.json  deribit_get_instruments_btc_option.json  deribit_ticker_btc_perpetual.json  snapshot_btc_surface.json  snapshot_btc_validation.json
