[project]
name = "volsurface"
version = "0.1.0"
description = "Live BTC volatility surface builder using Deribit options data"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "httpx>=0.27",
    "kaleido>=0.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "plotly>=5.0",
    "pydantic-settings>=2.1",
    "scipy>=1.13",
    "websockets>=13",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.29",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volsurface"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["scipy.*", "matplotlib.*", "plotly.*", "kaleido.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running TimescaleDB",
]
